--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = load_iris(as_frame=True)\n",
     "X = data.data\n",
-    "y = data.target"
+    "y = data.target\n",
+    "\n",
+    "label_names = data.target_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Handle missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No missing values found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# User change to handle NaN: \"remove\" or \"impute\"\n",
+    "handle_missing = \"remove\"\n",
+    "\n",
+    "\n",
+    "if X.isnull().any().any():\n",
+    "    print(\"Found NaN values.\")\n",
+    "    if handle_missing == \"remove\":\n",
+    "        print(\"Removing rows with NaN values...\")\n",
+    "        X = X.dropna()\n",
+    "        y = y[X.index]\n",
+    "    elif handle_missing == \"impute\":\n",
+    "        print(\"Imputing missing values with mean...\")\n",
+    "        from sklearn.impute import SimpleImputer\n",
+    "        imputer = SimpleImputer(strategy='mean')\n",
+    "        X = pd.DataFrame(imputer.fit_transform(X), columns=X.columns)\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid option for 'handle_missing'. Choose 'remove' or 'impute'.\")\n",
+    "else:\n",
+    "    print(\"No missing values found.\")"
    ]
   },
   {
@@ -54,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +209,13 @@
       "____________________________________________________________________________________________________\n",
       "\n",
       "Number of samples: 150\n",
-      "Number of features: 4\n"
+      "Number of features: 4\n",
+      "____________________________________________________________________________________________________\n",
+      "\n",
+      "Labels and their counts:\n",
+      "setosa: 50\n",
+      "versicolor: 50\n",
+      "virginica: 50\n"
      ]
     }
    ],
@@ -177,7 +227,14 @@
     "print(X.info())\n",
     "print(\"_\"*100)\n",
     "print(f\"\\nNumber of samples: {X.shape[0]}\")\n",
-    "print(f\"Number of features: {X.shape[1]}\")"
+    "print(f\"Number of features: {X.shape[1]}\")\n",
+    "print(\"_\"*100)\n",
+    "\n",
+    "\n",
+    "label_count = y.value_counts().sort_index()\n",
+    "print(\"\\nLabels and their counts:\")\n",
+    "for i, label in enumerate(label_names):\n",
+    "    print(f\"{label}: {label_count[i]}\")\n"
    ]
   },
   {
@@ -189,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,13 +271,13 @@
     "preprocessed_data = {\n",
     "    \"X_scaled\": X_scaled,  # For PCA\n",
     "    \"X_raw\": X,           # For CV\n",
-    "    \"y\": y\n",
+    "    \"y\": y,\n",
+    "    \"label_names\": label_names\n",
     "}\n",
     "\n",
     "# Save data\n",
-    "raw_data = {\"X\": X, \"y\": y}\n",
-    "with open('raw_data.pkl', 'wb') as f:\n",
-    "    pickle.dump(raw_data, f)"
+    "with open('preprocessed_data.pkl', 'wb') as f:\n",
+    "    pickle.dump(preprocessed_data, f)"
    ]
   }
  ],
