update more datasets

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_iris\n",
+    "from sklearn.datasets import load_iris, load_wine, load_breast_cancer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import pandas as pd\n",
@@ -36,11 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = load_iris(as_frame=True)\n",
+    "# User selects the dataset\n",
+    "# Options: \"iris\", \"wine\", \"breast_cancer\"\n",
+    "selected_dataset = \"iris\"  # Change this variable to choose a dataset\n",
+    "\n",
+    "# Load the selected dataset\n",
+    "if selected_dataset == \"iris\":\n",
+    "    data = load_iris(as_frame=True)\n",
+    "elif selected_dataset == \"wine\":\n",
+    "    data = load_wine(as_frame=True)\n",
+    "elif selected_dataset == \"breast_cancer\":\n",
+    "    data = load_breast_cancer(as_frame=True)\n",
+    "else:\n",
+    "    raise ValueError(\"Invalid dataset selected. Choose from 'iris', 'wine', or 'breast_cancer'.\")\n",
+    "\n",
+    "\n",
     "X = data.data\n",
     "y = data.target\n",
     "\n",
