--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# User selects the dataset\n",
     "# Options: \"iris\", \"wine\", \"breast_cancer\"\n",
-    "selected_dataset = \"iris\"  # Change this variable to choose a dataset\n",
+    "selected_dataset = \"wine\"  # Change this variable to choose a dataset\n",
     "\n",
     "# Load the selected dataset\n",
     "if selected_dataset == \"iris\":\n",
