--- a/Classification/01_data_preprocessing.ipynb
+++ b/Classification/01_data_preprocessing.ipynb
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize entire dataset for PCA"
+    "## Standardize dataset"
    ]
   },
   {
@@ -272,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save raw data"
+    "## Save data"
    ]
   },
   {
