--- a/Classification/04_evaluation_and_visualization.ipynb
+++ b/Classification/04_evaluation_and_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation and Visualization"
+    "# Evaluation and Visualization Classification"
    ]
   },
   {
