--- a/Classification/01_data_preprocessing.ipynb
+++ b/Classification/01_data_preprocessing.ipynb
@@ -40,11 +40,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# User selects the dataset\n",
+    "## USER SELECT DATASET\n",
     "# Options: \"iris\", \"wine\", \"breast_cancer\"\n",
-    "selected_dataset = \"wine\"  # Change this variable to choose a dataset\n",
+    "selected_dataset = \"wine\"\n",
+    "###########################################\n",
     "\n",
-    "# Load the selected dataset\n",
+    "\n",
     "if selected_dataset == \"iris\":\n",
     "    data = load_iris(as_frame=True)\n",
     "elif selected_dataset == \"wine\":\n",
@@ -74,8 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# User change to handle NaN: \"remove\" or \"impute\"\n",
+    "## USER change to handle NaN: \"remove\" or \"impute\"\n",
     "handle_missing = \"remove\"\n",
+    "###################################################\n",
     "\n",
     "\n",
     "if X.isnull().any().any():\n",
@@ -155,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save standardized data for PCA and raw data for CV\n",
+    "# Save standardized data for PCA (notebook 2) and raw data for CV (notebook 3) \n",
     "preprocessed_data = {\n",
     "    \"X_scaled\": X_scaled,  # For PCA\n",
     "    \"X_raw\": X,           # For CV\n",
@@ -163,7 +165,6 @@
     "    \"label_names\": label_names\n",
     "}\n",
     "\n",
-    "# Save data\n",
     "with open('preprocessed_data.pkl', 'wb') as f:\n",
     "    pickle.dump(preprocessed_data, f)"
    ]
