--- a/Classification/02_feature_engineering.ipynb
+++ b/Classification/02_feature_engineering.ipynb
@@ -60,8 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# User change to preferred number of components\n",
+    "## USER change to preferred number of components\n",
     "n_components = 3\n",
+    "####################################################\n",
+    "\n",
     "\n",
     "pca = PCA(n_components = n_components)\n",
     "X_pca = pca.fit_transform(X_scaled)"
@@ -93,8 +95,8 @@
    "outputs": [],
    "source": [
     "pca_data = {\n",
-    "    \"X_pca\": X_pca,        # PCA-transformed data\n",
-    "    \"X_raw\": preprocessed_data[\"X_raw\"],  # Raw data for CV\n",
+    "    \"X_pca\": X_pca,        \n",
+    "    \"X_raw\": preprocessed_data[\"X_raw\"], \n",
     "    \"y\": preprocessed_data[\"y\"]\n",
     "}\n",
     "\n",
@@ -117,7 +119,6 @@
    "source": [
     "plt.figure(figsize=(8, 6))\n",
     "\n",
-    "# Plot each class separately to ensure proper legend handling\n",
     "unique_classes = np.unique(y)\n",
     "colors = plt.cm.tab10(range(len(unique_classes)))\n",
     "\n",
