--- a/Classification/03_model_selection.ipynb
+++ b/Classification/03_model_selection.ipynb
@@ -75,10 +75,11 @@
     "    \"NeuralNetwork\": MLPClassifier(hidden_layer_sizes=(100,), max_iter=1000, random_state=42),\n",
     "}\n",
     "\n",
-    "# User input: Specify models to use\n",
+    "## USER INPUT: Choose models\n",
     "selected_models = [\"RandomForest\", \"NeuralNetwork\"]\n",
     "\n",
-    "# User input: Specify number of folds for cross-validation\n",
+    "\n",
+    "## USER INPUT: Specify number of folds for cross-validation\n",
     "use_pca = True  # Set to False to skip PCA\n",
     "n_components = 2  # Number of principal components to project onto (if use_pca=True)"
    ]
@@ -96,39 +97,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize cross-validation\n",
+    "# Initializing CV\n",
     "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
     "cv_results = {}\n",
     "best_model = None\n",
     "best_mean_accuracy = 0.0\n",
     "\n",
-    "# Train each selected model\n",
+    "# Training each of the selected models\n",
     "for model_name in tqdm(selected_models, desc=\"Training Models\"):\n",
     "    if model_name not in available_models:\n",
     "        print(f\"Model {model_name} is not available.\")\n",
     "        continue\n",
     "\n",
-    "    # Initialize model\n",
+    "    # Initializing the model\n",
     "    model = available_models[model_name]\n",
     "\n",
-    "    # Define pipeline components\n",
+    "    # Defining components for pipeline\n",
     "    steps = []\n",
     "    steps.append((\"scaler\", StandardScaler()))\n",
     "    if use_pca:\n",
     "        steps.append((\"pca\", PCA(n_components=n_components)))\n",
     "    steps.append((\"classifier\", model))\n",
     "\n",
-    "    # Create pipeline\n",
+    "    # Creating the pipeline\n",
     "    pipeline = Pipeline(steps)\n",
     "\n",
-    "    # Perform CV\n",
+    "    # Performing CV\n",
     "    print(f\"\\nTraining {model_name} with 5-fold Cross-Validation (PCA: {use_pca}, Components: {n_components}):\")\n",
     "    cv_scores = []\n",
     "    for score in tqdm(cross_val_score(pipeline, X_raw, y, cv=cv), desc=f\"{model_name} Progress\"):\n",
     "        cv_scores.append(score)\n",
     "\n",
-    "    # Store results\n",
+    "    # Storing the results\n",
     "    mean_accuracy = np.mean(cv_scores)\n",
     "    std_accuracy = np.std(cv_scores)\n",
     "    cv_results[model_name] = {\n",
@@ -138,12 +139,12 @@
     "        \"pipeline\": pipeline,\n",
     "    }\n",
     "\n",
-    "    # Check if this model is the best so far\n",
+    "    # Finding best model (not statistically proven)\n",
     "    if mean_accuracy > best_mean_accuracy:\n",
     "        best_mean_accuracy = mean_accuracy\n",
-    "        best_model = pipeline  # Save the pipeline of the best model\n",
+    "        best_model = pipeline\n",
     "\n",
-    "    # Display results for the current model\n",
+    "    # Displaying results\n",
     "    print(f\"\\n{model_name} Cross-Validation Scores:\")\n",
     "    print(cv_scores)\n",
     "    print(f\"Mean CV Accuracy: {mean_accuracy:.2%}\")\n",
