--- a/Classification/04_evaluation_and_visualization.ipynb
+++ b/Classification/04_evaluation_and_visualization.ipynb
@@ -48,11 +48,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the best model\n",
+    "# Loading the best model\n",
     "with open('best_model.pkl', 'rb') as f:\n",
     "    best_model = pickle.load(f)\n",
     "\n",
-    "# Load data\n",
+    "# Loading the data\n",
     "with open('pca_data.pkl', 'rb') as f:\n",
     "    pca_data = pickle.load(f)\n",
     "\n",
@@ -90,18 +90,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the best model on the full training set\n",
+    "# Training the best model on the full training set\n",
     "print(\"\\nTraining the Best Model on the Full Training Set...\")\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluate the best model on the training set\n",
+    "# Evaluating the best model on the training set\n",
     "print(\"\\nEvaluating the Best Model on the Training Set...\")\n",
     "y_train_pred = best_model.predict(X_train)\n",
     "print(\"\\nClassification Report for Training Set:\")\n",
     "print(classification_report(y_train, y_train_pred))\n",
     "print(\"_\" * 80)\n",
     "\n",
-    "# Evaluate the best model on the test set\n",
+    "# Evaluating the best model on the test set\n",
     "print(\"\\nEvaluating the Best Model on the Test Set...\")\n",
     "y_test_pred = best_model.predict(X_test)\n",
     "print(\"\\nClassification Report for Test Set:\")\n",
@@ -138,9 +138,10 @@
     "# Check if the problem is binary classification\n",
     "is_binary = len(np.unique(y)) == 2\n",
     "\n",
-    "# Only plot ROC and Precision-Recall curves if the problem is binary classification\n",
+    "# Only plotting ROC and Precision-Recall curves if the problem is binary classification\n",
     "if is_binary and hasattr(best_model, \"predict_proba\"):\n",
-    "    # Compute ROC curve and AUC\n",
+    "    \n",
+    "    # Computing ROC curve and AUC\n",
     "    y_proba = best_model.predict_proba(X_test)\n",
     "    fpr, tpr, _ = roc_curve(y_test, y_proba[:, 1])\n",
     "    roc_auc = auc(fpr, tpr)\n",
@@ -155,7 +156,7 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "    # Compute Precision-Recall curve\n",
+    "    # Computing Precision-Recall curve\n",
     "    precision, recall, _ = precision_recall_curve(y_test, y_proba[:, 1])\n",
     "    plt.figure(figsize=(10, 8))\n",
     "    plt.plot(recall, precision, label=\"Precision-Recall Curve\")\n",
