--- a/Regression/01_data_preprocessing.ipynb
+++ b/Regression/01_data_preprocessing.ipynb
@@ -43,11 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# User selects the dataset\n",
+    "## USER SELECT DATASET\n",
     "# Options: \"diabetes\", \"california_housing\"\n",
-    "selected_dataset = \"diabetes\"  # Change this variable to choose a dataset\n",
+    "selected_dataset = \"diabetes\" \n",
+    "############################################\n",
     "\n",
-    "# Load the selected dataset\n",
     "if selected_dataset == \"diabetes\":\n",
     "    data = load_diabetes(as_frame=True)\n",
     "elif selected_dataset == \"california_housing\":\n",
@@ -151,9 +151,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save standardized data for PCA (notebook 2) and raw data for CV (notebook 3) \n",
     "preprocessed_data = {\n",
-    "    \"X_scaled\": X_scaled,\n",
-    "    \"X_raw\": X,\n",
+    "    \"X_scaled\": X_scaled, # For PCA\n",
+    "    \"X_raw\": X,             # For CV\n",
     "    \"y\": y\n",
     "}\n",
     "\n",
