--- a/Regression/02_feature_engineering.ipynb
+++ b/Regression/02_feature_engineering.ipynb
@@ -59,8 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# User-defined number of components\n",
-    "n_components = 10  # Change this value as needed\n",
+    "## USER change to preferred number of components\n",
+    "n_components = 10\n",
+    "##################################################\n",
+    "\n",
+    "\n",
     "pca = PCA(n_components=n_components)\n",
     "X_pca = pca.fit_transform(X_scaled)"
    ]
