--- a/Regression/03_model_selection.ipynb
+++ b/Regression/03_model_selection.ipynb
@@ -75,12 +75,13 @@
     "    \"SVR\": SVR()\n",
     "}\n",
     "\n",
-    "# User input: Specify models to use\n",
+    "## USER INPUT: Choose models\n",
     "selected_models = [\"LinearRegression\", \"RandomForest\", \"Ridge\", \"Lasso\", \"GradientBoosting\", \"SVR\"]\n",
     "\n",
-    "# User input: Specify whether to use PCA\n",
+    "\n",
+    "## USER INPUT: Specify number of folds for cross-validation\n",
     "use_pca = False  # Set to False to skip PCA\n",
-    "n_components = 5  # Number of principal components to use if PCA is applied"
+    "n_components = 5  # Number of principal components to project onto (if use_pca=True)"
    ]
   },
   {
@@ -96,35 +97,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initializing CV\n",
     "cv = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "cv_results = {}\n",
     "best_model = None\n",
     "best_mean_mse = float(\"inf\")\n",
     "\n",
-    "# Train each selected model\n",
+    "# Training each of the selected models\n",
     "for model_name in tqdm(selected_models, desc=\"Training Models\"):\n",
     "    if model_name not in available_models:\n",
     "        print(f\"Model {model_name} is not available.\")\n",
     "        continue\n",
     "\n",
-    "    # Initialize model\n",
+    "    # Initializing the model\n",
     "    model = available_models[model_name]\n",
     "\n",
-    "    # Define pipeline components\n",
+    "    # Defining components for pipeline\n",
     "    steps = []\n",
     "    steps.append((\"scaler\", StandardScaler()))\n",
     "    if use_pca:\n",
     "        steps.append((\"pca\", PCA(n_components=n_components)))\n",
     "    steps.append((\"regressor\", model))\n",
     "\n",
-    "    # Create pipeline\n",
+    "    # Creating the pipeline\n",
     "    pipeline = Pipeline(steps)\n",
     "\n",
-    "    # Perform CV\n",
+    "    # Performing CV\n",
     "    print(f\"\\nTraining {model_name} with 5-fold Cross-Validation (PCA: {use_pca}, Components: {n_components}):\")\n",
     "    cv_scores = -cross_val_score(pipeline, X_raw, y, cv=cv, scoring='neg_mean_squared_error')\n",
     "\n",
-    "    # Store results\n",
+    "    # Storing the results\n",
     "    mean_mse = np.mean(cv_scores)\n",
     "    std_mse = np.std(cv_scores)\n",
     "    cv_results[model_name] = {\n",
@@ -133,12 +135,12 @@
     "        \"pipeline\": pipeline\n",
     "    }\n",
     "\n",
-    "    # Check if this model is the best so far\n",
+    "    # Finding best model (not statistically proven)\n",
     "    if mean_mse < best_mean_mse:\n",
     "        best_mean_mse = mean_mse\n",
     "        best_model = pipeline\n",
     "\n",
-    "    # Display results for the current model\n",
+    "    # Displaying results\n",
     "    print(f\"\\n{model_name} Cross-Validation Results:\")\n",
     "    print(f\"Mean MSE: {mean_mse:.2f}\")\n",
     "    print(f\"Standard Deviation of MSE: {std_mse:.2f}\")\n",
