--- a/Regression/04_evaluation_and_visualization.ipynb
+++ b/Regression/04_evaluation_and_visualization.ipynb
@@ -39,9 +39,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading the best model\n",
     "with open('best_model.pkl', 'rb') as f:\n",
     "    best_model = pickle.load(f)\n",
     "\n",
+    "# Loading the data\n",
     "with open('pca_data.pkl', 'rb') as f:\n",
     "    pca_data = pickle.load(f)\n",
     "\n",
@@ -78,24 +80,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the best model on the training set\n",
+    "# Training the best model on the full training set\n",
     "print(\"\\nTraining the Best Model on the Training Set...\")\n",
     "best_model.fit(X_train, y_train)\n",
     "\n",
-    "# Predict on the training set\n",
+    "# Predicting on the training set\n",
     "y_train_pred = best_model.predict(X_train)\n",
     "\n",
-    "# Predict on the test set\n",
+    "# Predicting on the test set\n",
     "y_test_pred = best_model.predict(X_test)\n",
     "\n",
-    "# Evaluate on training set\n",
+    "# Evaluating on training set\n",
     "train_mse = mean_squared_error(y_train, y_train_pred)\n",
     "train_r2 = r2_score(y_train, y_train_pred)\n",
     "print(f\"\\nTraining Set Performance:\")\n",
     "print(f\"Mean Squared Error: {train_mse:.2f}\")\n",
     "print(f\"R^2 Score: {train_r2:.2f}\")\n",
     "\n",
-    "# Evaluate on test set\n",
+    "# Evaluating on test set\n",
     "test_mse = mean_squared_error(y_test, y_test_pred)\n",
     "test_r2 = r2_score(y_test, y_test_pred)\n",
     "print(f\"\\nTest Set Performance:\")\n",
